--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "firebase": "^11.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.4"
