--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "firebase": "^11.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.4.1",
