--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
